--- a/src/app/cat/cat.component.html
+++ b/src/app/cat/cat.component.html
@@ -1,33 +1,38 @@
 
   
-<h1>Refresh Facts :
+<h1 class="text"><span class="text">Refresh Facts : </span>
+  <!-- Bouton pour générer de nouvelles anecdotes -->
   <button mat-stroked-button (click)="onRefresh()">
+    <!-- Logo Refresh -->
     <fa-icon [icon]="['fas', 'sync-alt']" size="lg"></fa-icon>
   </button>
 </h1>
 
-  <mat-grid-list cols="4" rowHeight="700px">
-    <mat-grid-tile *ngFor="let cat of cats; let i=index">
-        <mat-card class="card">
-          <mat-card-header>
-            <div mat-card-avatar>
-              <svg id="Calque_1" data-name="Calque 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 99.78 119.48"><defs><style>.cls-1,.cls-3{fill:#fff;}.cls-1,.cls-2,.cls-3,.cls-4{stroke:#1d1d1b;stroke-miterlimit:10;}.cls-1,.cls-4{stroke-width:3px;}.cls-2{fill:#1d1d1b;}.cls-4{fill:none;}</style></defs><title>TheWorldOfCats</title><path class="cls-1" d="M31.46,40.47A173.09,173.09,0,0,0,30.72,8.4c9.94,8.85,18.61,18.23,24.65,28.73,0,0,36.6-.38,36.14-.74,0-9.82,15.56-26.13,21.68-28a67.7,67.7,0,0,0,0,33C153,153.9-17.73,145.57,31.46,40.47Z" transform="translate(-20.97 -4.6)"/><path class="cls-2" d="M57,48.44c10.85,21,1.67,23,28.92,9.08,27.24-16.13-3.71,20.57,21.49,20.81,12.24,1.3-1.85,13.47-5.74,18.85S79.93,113.3,67.28,107.93s6.8-13.53-6.73-25.58S55.62,99.74,37.2,91.62C4.12,77,46.61,28.21,57,48.44Z" transform="translate(-20.97 -4.6)"/><ellipse class="cls-3" cx="49.33" cy="65.71" rx="5.31" ry="13.9" transform="translate(-43.5 100.97) rotate(-82.12)"/><ellipse class="cls-3" cx="90.3" cy="65.2" rx="15.23" ry="5.49" transform="translate(-32.32 15.07) rotate(-11.7)"/><line class="cls-4" x1="28.85" y1="55.82" x2="27.85" y2="66.41"/><line class="cls-4" x1="67.74" y1="55.27" x2="70.51" y2="65.99"/><path class="cls-2" d="M31.89,29.16s2.16,10,10.32,8,7.12-8,7.12-8A118.51,118.51,0,0,0,31.26,9.67,64.1,64.1,0,0,1,31.89,29.16Z" transform="translate(-20.97 -4.6)"/><path class="cls-2" d="M111,31.31c-14.64,11.86-8.83,20.33,6.63,27.94-1.68-7.17-3.33-14.86-5.24-17.45Z" transform="translate(-20.97 -4.6)"/><path class="cls-2" d="M83.9,121c-1.3-6-7.15-13.29-10.83-5.5-3.18,4.3-7.82,4.31-13.41,1.51q-8.73-12.93-23.18-8.25C51.88,122.74,67.83,123.27,83.9,121Z" transform="translate(-20.97 -4.6)"/><path class="cls-2" d="M88.74,105.18c12.79-3.31,16.19.32,13.45,5.79a22.16,22.16,0,0,0,9.58-10.33c-4,5-13.2.93-8.4-5.54C103.6,94.79,88.74,105.18,88.74,105.18Z" transform="translate(-20.97 -4.6)"/></svg>
-            </div>
-            <mat-card-title>Cat Fact</mat-card-title>
-            <mat-card-subtitle [class.VFact]="cat.status.verified" [class.FFact]="!cat.status.verified">Verified : {{ cat.status.verified || 'no'}}</mat-card-subtitle>
-          </mat-card-header>  
-          <img mat-card-image class="card-img" src="{{ imgs[i].url }}" alt="Image card" *ngIf="imgs[i].url!=undefined">
-          <mat-card-content class="card-txt">
-            <p>
-              {{ cat.text }}
-            </p>
-            <mat-divider inset=“true”></mat-divider>
-            <div class="greynote">Fact ID : {{ cat._id }}</div>
-          </mat-card-content>
-          <mat-card-actions>
-            <button mat-button (click)="onSave(imgs[i].url, cat.text, cat.status.verified)">Register the fact</button>
-          </mat-card-actions>
-        </mat-card>
-    </mat-grid-tile>
-  </mat-grid-list>
+<mat-grid-list cols="4" rowHeight="700px">
+  <!-- Génération des cartes -->
+  <mat-grid-tile *ngFor="let cat of cats; let i=index">
+    <mat-card class="card">
+      <mat-card-header>
+        <div mat-card-avatar>
+          <!-- Logo des cartes -->
+          <svg id="Calque_1" data-name="Calque 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 99.78 119.48"><defs><style>.cls-1,.cls-3{fill:#fff;}.cls-1,.cls-2,.cls-3,.cls-4{stroke:#1d1d1b;stroke-miterlimit:10;}.cls-1,.cls-4{stroke-width:3px;}.cls-2{fill:#1d1d1b;}.cls-4{fill:none;}</style></defs><title>TheWorldOfCats</title><path class="cls-1" d="M31.46,40.47A173.09,173.09,0,0,0,30.72,8.4c9.94,8.85,18.61,18.23,24.65,28.73,0,0,36.6-.38,36.14-.74,0-9.82,15.56-26.13,21.68-28a67.7,67.7,0,0,0,0,33C153,153.9-17.73,145.57,31.46,40.47Z" transform="translate(-20.97 -4.6)"/><path class="cls-2" d="M57,48.44c10.85,21,1.67,23,28.92,9.08,27.24-16.13-3.71,20.57,21.49,20.81,12.24,1.3-1.85,13.47-5.74,18.85S79.93,113.3,67.28,107.93s6.8-13.53-6.73-25.58S55.62,99.74,37.2,91.62C4.12,77,46.61,28.21,57,48.44Z" transform="translate(-20.97 -4.6)"/><ellipse class="cls-3" cx="49.33" cy="65.71" rx="5.31" ry="13.9" transform="translate(-43.5 100.97) rotate(-82.12)"/><ellipse class="cls-3" cx="90.3" cy="65.2" rx="15.23" ry="5.49" transform="translate(-32.32 15.07) rotate(-11.7)"/><line class="cls-4" x1="28.85" y1="55.82" x2="27.85" y2="66.41"/><line class="cls-4" x1="67.74" y1="55.27" x2="70.51" y2="65.99"/><path class="cls-2" d="M31.89,29.16s2.16,10,10.32,8,7.12-8,7.12-8A118.51,118.51,0,0,0,31.26,9.67,64.1,64.1,0,0,1,31.89,29.16Z" transform="translate(-20.97 -4.6)"/><path class="cls-2" d="M111,31.31c-14.64,11.86-8.83,20.33,6.63,27.94-1.68-7.17-3.33-14.86-5.24-17.45Z" transform="translate(-20.97 -4.6)"/><path class="cls-2" d="M83.9,121c-1.3-6-7.15-13.29-10.83-5.5-3.18,4.3-7.82,4.31-13.41,1.51q-8.73-12.93-23.18-8.25C51.88,122.74,67.83,123.27,83.9,121Z" transform="translate(-20.97 -4.6)"/><path class="cls-2" d="M88.74,105.18c12.79-3.31,16.19.32,13.45,5.79a22.16,22.16,0,0,0,9.58-10.33c-4,5-13.2.93-8.4-5.54C103.6,94.79,88.74,105.18,88.74,105.18Z" transform="translate(-20.97 -4.6)"/></svg>
+        </div>
+        <!-- Nom générique des cartes -->
+        <mat-card-title>Cat Fact</mat-card-title>
+        <!-- Affiche si l'anecdote est vérifiée ou pas et met une couleur verte si oui/rouge si non-->
+        <mat-card-subtitle [class.VFact]="cat.status.verified" [class.FFact]="!cat.status.verified">Verified : {{ cat.status.verified || 'no'}}</mat-card-subtitle>
+      </mat-card-header>
+      <!-- Affiche une image de chat -->
+      <img mat-card-image class="card-img" src="{{ imgs[i].url }}" alt="Image card" *ngIf="imgs[i].url!=undefined">
+      <!-- Affiche une anecdote sur les chats -->
+      <mat-card-content class="card-txt">
+        <p>{{ cat.text }}</p>
+        <mat-divider inset=“true”></mat-divider>
+        <div class="greynote">Fact ID : {{ cat._id }}</div>
+      </mat-card-content>
+      <!-- Boutton pour ajouter la carte aux favoris -->
+      <mat-card-actions><button mat-button (click)="onSave(imgs[i].url, cat.text, cat.status.verified)">Register the fact</button></mat-card-actions>
+    </mat-card>
+  </mat-grid-tile>
+</mat-grid-list>
 
