--- a/src/app/cat/cat.component.scss
+++ b/src/app/cat/cat.component.scss
@@ -1,3 +1,13 @@
+h1.text { margin: 10px 0 0 5px; }
+
+span.text { vertical-align: middle; }
+
+h1.text > button {
+  min-width: 40px;
+  vertical-align: middle;
+  box-shadow: 0 0 5px rgb(0,0,0,0.2);
+}
+
 .card {
   max-width: 400px;
   height: 600px;
@@ -10,19 +20,13 @@
   border-bottom: 2px solid lightgrey;
 }
 
-.card-txt {
-	height: 150px;
-}
+.card-txt { height: 150px; }
 
 .greynote {
 	margin-top: 5px; 
 	color: lightgrey;
 }
 
-.VFact {
-	color: green;
-}
-
-.FFact {
-	color: red;
-}
+// Couleur des annecdotes
+.VFact { color: green; }
+.FFact { color: red; }
